Update junit to version 5